# vagabond

./: .gitignore  pyproject.toml
vagabond/: annotator.py  extractor.py  processor.py  store.py  typedefs.py  viewer.py
vagabond/examples/: webpage.py
webpage-parsers/: tim-ferriss.py
